--- a/site/package.json
+++ b/site/package.json
@@ -8,11 +8,14 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^12.3.0",
+    "jquery": "^3.7.1",
+    "owl.carousel": "^2.3.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.9.1",
     "react-scripts": "5.0.1",
+    "swiper": "^12.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
